fixed mobile menu icon alignment

--- a/_sass/app.scss
+++ b/_sass/app.scss
@@ -28,7 +28,7 @@
 
 #menu {
 	display: block;
-  padding: 5px 25px;
+  padding: 5px 0px;
 }
 
 @media(min-width: 768px) {
